[package]
name = "bluetooth-scanner"
version = "0.1.1"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
dioxus = { path = "../../packages/dioxus", features = ["desktop"] }
futures-channel = "0.3.31"
futures = "0.3.31"
btleplug = "0.11.8"
