[package]
name = "ecommerce-site"
version = "0.1.1"
edition = "2024"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../packages/dioxus", features = ["fullstack", "router"] }
reqwest = { git = "https://github.com/cyrup-ai/reqwest", branch = "main", features = ["json"] }
serde = "1.0.226"

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }

[features]
web = ["dioxus/web"]
server = ["dioxus/server"]
