[package]
name = "bevy-example"
version = "0.0.0"
edition = "2024"
resolver = "3"
license = "MIT"
publish = false

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
native = ["dioxus/native"]
tracing = ["dep:tracing-subscriber", "dioxus-native/tracing"]

[dependencies]
bevy = { version = "0.16" }
dioxus-native = { path = "../../packages/native" }
dioxus = { path = "../../packages/dioxus" }
wgpu = { git = "https://github.com/cyrup-ai/wgpu", branch = "main", package = "wgpu" }
color = "0.3"
tracing-subscriber = { version = "0.3.20", optional = true }
