[package]
name = "fullstack-auth-example"
version = "0.1.0"
edition = "2024"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { path = "../../packages/web", features = ["hydrate"], optional = true }
dioxus = { features = ["fullstack"], path = "../../packages/dioxus" }
dioxus-fullstack = { path = "../../packages/fullstack" }
dioxus-cli-config = { path = "../../packages/cli-config", optional = true }
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
tower-http = { version = "0.6.6", features = ["auth"], optional = true }
async-trait = { version = "0.1.89", optional = true }
sqlx = { version = "0.8.6", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
http = { version = "1.3.1", optional = true }
tower = { version = "0.5.2", optional = true }

execute = "0.2.13"
serde = "1.0.226"
anyhow = "1.0.100"

[dependencies.axum_session]
version = "0.17.0"
optional = true

[dependencies.axum_session_auth]
version = "0.16.0"
optional = true

[dependencies.axum_session_sqlx]
version = "0.5.1"
features = ["sqlite"]
optional = true

[features]
default = []
server = [
    "dioxus/server",
    "dep:dioxus-cli-config",
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:async-trait",
    "dep:sqlx",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:http",
    "dep:tower",
]
web = ["dioxus/web", "dep:dioxus-web"]
