[package]
name = "fullstack-hello-world-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../packages/dioxus", features = ["fullstack"]}
serde = "1.0.226"
reqwest = { git = "https://github.com/cyrup-ai/reqwest", branch = "main" }

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
