[package]
name = "fullstack-router-example"
version = "0.1.0"
edition = "2024"
resolver = "3"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../packages/dioxus", features = ["fullstack", "router"] }
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
serde = { version = "1.0.226", features = ["derive"] }

[features]
default = []
server = ["axum", "dioxus/server"]
web = ["dioxus/web"]

