[package]
name = "fullstack-streaming-example"
version = "0.1.0"
edition = "2024"
resolver = "3"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../packages/dioxus", features = ["fullstack"] }
serde = "1.0.226"
futures = "0.3.31"
tokio = { version = "1.47.1", optional = true }
futures-util = "0.3.31"

[features]
default = []
server = ["dioxus/server", "dep:tokio"]
web = ["dioxus/web"]
