[package]
name = "fullstack-websocket-example"
version = "0.1.0"
edition = "2024"
resolver = "3"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../packages/dioxus", features = ["fullstack"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"], optional = true }

[features]
server = ["dioxus/server", "dep:tokio"]
web = ["dioxus/web"]
