# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "native-headless-in-bevy"
version = "0.0.0"
edition = "2024"
resolver = "3"
license = "MIT"
publish = false

[features]
tracing = ["dep:tracing-subscriber", "dioxus-native-dom/tracing"]

[dependencies]
dioxus = { path = "../../packages/dioxus" }
dioxus-native-dom = { path = "../../packages/native-dom" }
blitz-dom = { path = "../../../blitz/packages/blitz-dom", default-features = true }
blitz-paint = { path = "../../../blitz/packages/blitz-paint", default-features = true }
blitz-traits = { path = "../../../blitz/packages/blitz-traits", default-features = true }
anyrender_vello = { path = "../../../blitz/packages/anyrender_vello" }
wgpu = { path = "../../../wgpu/wgpu" }
tracing-subscriber = { version = "0.3.20", optional = true }
bevy = { version = "0.16" }
async-std = "1.13"
crossbeam-channel = "0.5"
paste = "1.0"
rustc-hash = "2"
vello = { path = "../../../vello" }

