[package]
name = "native-headless"
version = "0.0.0"
edition = "2024"
resolver = "3"
license = "MIT"
publish = false

[features]
tracing = ["dep:tracing-subscriber", "dioxus-native-dom/tracing"]

[dependencies]
dioxus = { path = "../../packages/dioxus", default-features = false, features = ["html", "hooks", "signals"] }
dioxus-native-dom = { path = "../../packages/native-dom" }
anyrender_vello = { git = "https://github.com/cyrup-ai/blitz", branch = "main", package = "anyrender_vello" }
vello = { git = "https://github.com/cyrup-ai/vello", branch = "main" }
rustc-hash = "2"
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.20", optional = true }
wgpu = { git = "https://github.com/cyrup-ai/wgpu", branch = "main", package = "wgpu" }
pollster = "0.4"
bytemuck = "1"
blitz-paint = { git = "https://github.com/cyrup-ai/blitz", branch = "main", package = "blitz-paint", default-features = true }
blitz-traits = { git = "https://github.com/cyrup-ai/blitz", branch = "main", package = "blitz-traits", default-features = true }
blitz-dom = { git = "https://github.com/cyrup-ai/blitz", branch = "main", package = "blitz-dom", default-features = true }
