[package]
name = "dioxus-tailwind"
version = "0.0.0"
authors = []
edition = "2021"
description = "A tailwindcss example using Dioxus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/dioxus/"
homepage = "https://dioxuslabs.com"
documentation = "https://dioxuslabs.com"
publish = false

[dependencies]
manganis = { path = "../../packages/manganis/manganis" }
dioxus = { path = "../../packages/dioxus" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
